# fiamma-sdk-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: bitvmstaker_query.rs  chain.rs  lib.rs  query.rs  tx.rs  wallet.rs  zkpverify_query.rs
src/protos/: bitvmstaker.proto  zkpverify.proto
src/protos/bitvmstaker/: bitvmstaker.proto  genesis.proto  params.proto  query.proto  tx.proto
src/protos/zkpverify/: genesis.proto  params.proto  query.proto  tx.proto  zkpverify.proto
src/types/: mod.rs  msg_create_staker.rs  msg_register_vk.rs  msg_remove_staker.rs  msg_remove_vk.rs  msg_submit_community_verification.rs  msg_submit_proof.rs
