[package]
name = "fiamma-sdk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf = "3.5.0"
tonic = "0.12.0"
prost = "0.13.1"
# cosmrs = { version = "0.17.0", features = ["default", "dev"]}

[dev-dependencies]
cosmrs = { version = "0.17.0", features = ["default", "dev"]}
tokio = { version = "1" }

[build-dependencies]
tonic-build = "0.12.0"