[package]
name = "fiamma-sdk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12.1"
prost-types = "0.12"
tonic = { version = "0.11", features = ["default", "prost", "tls", "tls-roots", "tls-webpki-roots"] }
cosmrs = { version = "0.17.0", features = ["default", "rpc"]}
cosmos-sdk-proto = { version = "0.22.0" }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
sha2 = "0.10.8"

[dev-dependencies]
tokio = { version = "1.38", features = ["full"] }
hex = "0.4"
sha2 = "0.10.8"
cosmos-sdk-proto = { version = "0.22.0" }
cosmrs = { version = "0.17.0", features = ["default", "dev", "rpc"]}

[build-dependencies]
tonic-build = { version = "0.11", features = ["default", "prost"] }